--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -6,6 +6,9 @@
 			<div class="box-element" id="form-wrapper">
 				<form id="form">
 					<div id="user-info">
+						<hr>
+						<p>Customer Info:</p>
+						<hr>
 						<div class="form-field">
 							<input required class="form-control" type="text" name="name" placeholder="Name..">
 						</div>
@@ -27,9 +30,7 @@
 						<div class="form-field">
 							<input class="form-control" type="text" name="state" placeholder="State..">
 						</div>
-						<div class="form-field">
-							<input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
-						</div>
+						
 						<div class="form-field">
 							<input class="form-control" type="text" name="country" placeholder="Zip code..">
 						</div>
